# nanofmt

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
examples/: CMakeLists.txt
examples/src/: example.cpp
include/nanofmt/: format.h  parse.h  serialize.h  types.h  utility.h
src/: serialize.cpp
test/: CMakeLists.txt
test/src/: format.cpp  format_decimal.cpp  parse.cpp  utility.cpp
